tests/errors/sem_testnull.kt
fun main() {
    var num: Int = null
}